updated egg sprite to reflect an upstream PR, added recipe for eggplant parm

--- a/Resources/Prototypes/_RMC14/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Cooking/meal_recipes.yml
@@ -96,3 +96,13 @@
     Flour: 5
     Sugar: 5
     RMCPeanutButter: 5
+
+- type: microwaveMealRecipe
+  id: RecipeEggplantParm
+  name: eggplant parm recipe
+  result: FoodMealEggplantParm
+  time: 15
+  group: Savory
+  solids:
+    FoodCheeseSlice: 1
+    FoodEggplant: 1
