Fix burn visuals too why not

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/avali.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/avali.yml
@@ -25,6 +25,8 @@
       Brute:
         sprite: Mobs/Effects/brute_damage.rsi
         color: "#E6C4FF"
+      Burn:
+        sprite: Mobs/Effects/burn_damage.rsi
   - type: MeleeWeapon
     soundHit:
       path: /Audio/Weapons/pierce.ogg
