--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/skrell.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/skrell.yml
@@ -19,6 +19,8 @@
       Brute:
         sprite: Mobs/Effects/brute_damage.rsi
         color: "#1d2cbf"
+      Burn:
+        sprite: Mobs/Effects/burn_damage.rsi
 
 - type: entity
   parent: BaseSpeciesDummy
