remade RMC vegetable pizza, moved to its own recipe

--- a/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
@@ -679,7 +679,7 @@
 - type: microwaveMealRecipe
   id: RecipeVegetablePizza
   name: vegetable pizza recipe
-  result: RMCFoodPizzaVegetableFull #Changed for RMC
+  result: FoodPizzaVegetable
   time: 30
   group: Pizza
   solids:
