--- a/Resources/Prototypes/_RMC14/Kitchen/Food.yml
+++ b/Resources/Prototypes/_RMC14/Kitchen/Food.yml
@@ -71,3 +71,29 @@
           Quantity: 2
         - ReagentId: RMCPeanutButter
           Quantity: 3
+
+- type: entity
+  name: peanut butter and jelly sandwich
+  parent: CMFoodBase
+  id: RMCFoodPBJSandwich
+  description: A sweet and savory sandwich loved by adults and marines alike!
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Consumable/Food/misc.rsi
+    state: pbandj
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 15
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 4
+        - ReagentId: RMCPeanutButter
+          Quantity: 3
+        - ReagentId: RMCCherryJelly
+          Quantity: 3
+  - type: FlavorProfile
+    flavors:
+    - bread
+    - sweet
+    - nutty
