adjust fill states, adds m34 rack

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/GunRacks/rifles.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/GunRacks/rifles.yml
@@ -1,3 +1,5 @@
+# M54C Mk2
+
 - type: entity
   parent: RMCGunRackBase
   id: RMCGunRackM54CEmpty
@@ -79,3 +81,87 @@
       - WeaponRifleM54C
       item_5:
       - WeaponRifleM54C
+
+# M54C Mk 1
+
+- type: entity
+  parent: RMCGunRackBase
+  id: RMCGunRackM54CMk1Empty
+  name: M54C Mk1 gun rack
+  suffix: M54C Mk1, Empty
+  description: AEGIS-produced gun rack for storage of long guns. While initial model was supposed to be extremely modifiable, UNMC comissioned racks with fixed slots which only fit M54C Mk1 rifles. Some say they were cheaper, and some say the main reason was marine's ability to easily break anything more complex than a tungsten ball.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Structures/Machines/VendingMachines/GunRacks/m54c_rack.rsi
+  - type: ItemSlots
+    slots:
+      item_1:
+        name: M54C Mk1
+        whitelist:
+          tags:
+          - RMCWeaponRifleM54CMK1
+      item_2:
+        name: M54C Mk1
+        whitelist:
+          tags:
+          - RMCWeaponRifleM54CMK1
+      item_3:
+        name: M54C Mk1
+        whitelist:
+          tags:
+          - RMCWeaponRifleM54CMK1
+      item_4:
+        name: M54C Mk1
+        whitelist:
+          tags:
+          - RMCWeaponRifleM54CMK1
+      item_5:
+        name: M54C Mk1
+        whitelist:
+          tags:
+          - RMCWeaponRifleM54CMK1
+  - type: ItemMapper
+    mapLayers:
+      fill_1:
+        minCount: 1
+        whitelist:
+          tags:
+          - RMCWeaponRifleM54CMK1
+      fill_2:
+        minCount: 2
+        whitelist:
+          tags:
+          - RMCWeaponRifleM54CMK1
+      fill_3:
+        minCount: 3
+        whitelist:
+          tags:
+          - RMCWeaponRifleM54CMK1
+      fill_4:
+        minCount: 4
+        whitelist:
+          tags:
+          - RMCWeaponRifleM54CMK1
+      fill_5:
+        minCount: 5
+        whitelist:
+          tags:
+          - RMCWeaponRifleM54CMK1
+
+- type: entity
+  parent: RMCGunRackM54CMk1Empty
+  id: RMCGunRackM54CMk1Filled
+  suffix: M54C Mk1, Filled
+  components:
+  - type: ContainerFill
+    containers:
+      item_1:
+      - WeaponRifleM54CMK1
+      item_2:
+      - WeaponRifleM54CMK1
+      item_3:
+      - WeaponRifleM54CMK1
+      item_4:
+      - WeaponRifleM54CMK1
+      item_5:
+      - WeaponRifleM54CMK1
