--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/Hive/xeno_hive_cluster.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/Hive/xeno_hive_cluster.yml
@@ -77,6 +77,7 @@
     plasmaCost: 300
     spawn: HiveClusterXeno
   - type: HiveConstructionRequiresHiveCore
+  - type: HiveConstructionRequiresWeedableSurface
   - type: HiveConstructionLimited
     id: HiveClusterXeno
   - type: WarpPoint
