--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/royal_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/royal_headsets.yml
@@ -15,6 +15,7 @@
     - RoyalMarine
     radioTextIncrease: 2
   - type: GrantTacMapAlert
+  - type: GrantTestAlert
 
 - type: entity
   parent: CMEncryptionKey
