--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/ship_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/ship_headsets.yml
@@ -39,6 +39,7 @@
       key_slots:
       - CMEncryptionKeyCommon
   - type: GrantTacMapAlert
+  - type: GrantTestAlert
 
 - type: entity
   parent: RMCHeadsetShip
