initial 3 proper ui?

--- a/Resources/Prototypes/_RMC14/Alerts/alerts.yml
+++ b/Resources/Prototypes/_RMC14/Alerts/alerts.yml
@@ -121,3 +121,21 @@
   description: alerts-stamina-desc
   minSeverity: 0
   maxSeverity: 4
+
+- type: alert
+  id: MarineAreaAlert
+  icons:
+  - sprite: /Textures/_RMC14/Structures/Machines/map_table.rsi
+    state: maptable
+  - sprite: /Textures/_RMC14/Structures/Machines/map_table.rsi
+    state: maptable
+  - sprite: /Textures/_RMC14/Structures/Machines/map_table.rsi
+    state: maptable
+  - sprite: /Textures/_RMC14/Structures/Machines/map_table.rsi
+    state: maptable
+  - sprite: /Textures/_RMC14/Structures/Machines/map_table.rsi
+    state: maptable
+  name: Current Area
+  description: Shows your current area, ceiling level, and restrictions.
+  minSeverity: 0
+  maxSeverity: 4
