Give FORECON Marksman infiltrator boots (#6538)

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/marksman.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/marksman.yml
@@ -3,7 +3,7 @@
   id: RMCSurvivorForeconMarksman
   name: rmc-job-name-forecon-marksman
   playTimeTracker: RMCJobSurvivorMarksmanForecon
-  startingGear: RMCGearForeconBase
+  startingGear: RMCGearForeconMarksman
   icon: "CMJobIconWeaponsSpecialist"
   spawnMenuRoleName: FORECON Marksman (Survivor)
   special:
@@ -42,6 +42,12 @@
 - type: playTimeTracker
   id: RMCJobSurvivorMarksmanForecon
   isHumanoid: true
+
+- type: startingGear
+  parent: RMCGearForeconBase
+  id: RMCGearForeconMarksman
+  equipment:
+    shoes: RMCScoutShoes
 
 - type: entity
   parent: CMSpawnPointJobBase
