fix buero headset stuff

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
@@ -33,7 +33,7 @@
       key_slots:
       - RMCEncryptionKeyBureau
 
-# For ICB Liaison
+# For CMB and ICB survivors.
 - type: entity
   parent: RMCHeadsetIconsCMB
   id: RMCHeadsetDistressBureauDamaged
