--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Squad/medic.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Squad/medic.yml
@@ -45,8 +45,8 @@
         points: 6
       - id: CMFirstAidO2KitFilled
         points: 6
-#      - id: RMCRadiationAidKit #Currently disabled in 13 and should not appear during normal gameplay.
-#        points: 6
+      - id: RMCRadiationAidKit
+        points: 6
     - name: Pill Bottles
       entries:
       - id: CMPillCanisterBicaridine
