--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Lathe/medilathe.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Lathe/medilathe.yml
@@ -155,7 +155,7 @@
   - CMToxinAidKit
   - CMAdvFirstAidKit
   - CMFirstAidO2Kit
-  #    - Radiation First Aid Kit (2000 Plastic)
+  - RMCRadiationAidKit
   #    - Syringe Case (1000 Plastic)
   - RMCSurgicalTrayEmpty
   - RMCVialBox
