--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Lathe/medilathe_recipes.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Lathe/medilathe_recipes.yml
@@ -99,6 +99,13 @@
     RMCPlastic: 50 # 1000
 
 - type: latheRecipe
+  id: RMCRadiationAidKit
+  result: RMCRadiationAidKit
+  completetime: 4
+  materials:
+    RMCPlastic: 100 # 2000
+
+- type: latheRecipe
   id: RMCVialBox
   result: RMCVialBox
   completetime: 4
