re-added grass seeds to seed vendor

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
@@ -395,7 +395,7 @@
     LemonSeeds: 3
     OrangeSeeds: 3
     PineappleSeeds: 3
-    # GrassSeeds: 3
+    GrassSeeds: 3
     CocoaSeeds: 3
     PlumpSeeds: 2
     CabbageSeeds: 3
