--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/GunRacks/base.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/GunRacks/base.yml
@@ -49,3 +49,6 @@
   - type: ItemSlots
   - type: CMItemSlots
   - type: Appearance
+  - type: ContainerContainer
+    containers:
+      item_storage: !type:Container
