Split inherent and granting leap protection logic. Add support for items that provide leap protection in-hand.

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
@@ -81,7 +81,7 @@
       - type: WoundableUntreatable
       - type: Insulated
       - type: RMCLeapProtection
-        stunDuration: 3
+        inherentStunDuration: 3
       removeComponents:
       - type: CMSurgeryTarget
       - type: Infectable
