--- a/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/marine_armor.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/marine_armor.yml
@@ -384,7 +384,7 @@
     explosionArmor: 40
   - type: Corrodible
     isCorrodible: false
-  - type: RMCLeapProtection
+  - type: RMCGrantLeapProtection
   - type: ItemCamouflage
     camouflageVariations:
       Jungle: _RMC14/Objects/Clothing/OuterClothing/Armor/m3/g4/jungle.rsi
