--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/synth.yml
@@ -86,7 +86,7 @@
       - type: WoundableUntreatable
       - type: Insulated
       - type: RMCLeapProtection
-        stunDuration: 3
+        inherentStunDuration: 3
       removeComponents:
       - type: CMSurgeryTarget
       - type: Infectable
