--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Shotguns/shotgun_boxes.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Shotguns/shotgun_boxes.yml
@@ -1,4 +1,4 @@
-﻿- type: entity
+- type: entity
   abstract: true
   parent: BaseStorageItem
   id: RMCBoxShotgunBase
@@ -40,34 +40,34 @@
 - type: Tag
   id: RMCBoxShotgunShells
 
-- type: entity
-  parent: RMCBoxShotgunBase
-  id: RMCBoxShotgunBuckshot
-  name: box of buckshot shells
-  description: A box filled with buckshot spread shotgun shells. 12 Gauge.
-  components:
-  - type: Storage
-    whitelist:
-      tags:
-      - RMCShellShotgunBuckshot
-  - type: StorageFill
-    contents:
-    - id: CMShellShotgunBuckshot
-      amount: 5
-  - type: Sprite
-    layers:
-    - state: smallshell_box
-      color: "#944444"
-    - state: shell_box_buckshot
-      color: "#e0d5c2"
-    - state: smallshell_ammo_full_12g_base
-      color: "#ffffff"
-    - state: smallshell_ammo_full_12g_color
-      color: "#944444"
-      map: [ "full" ]
-    - state: smallshell_empty
-      map: [ "empty" ]
-      color: "#944444"
+# - type: entity
+#   parent: RMCBoxShotgunBase
+#   id: RMCBoxShotgunBuckshot
+#   name: box of buckshot shells
+#   description: A box filled with buckshot spread shotgun shells. 12 Gauge.
+#   components:
+#   - type: Storage
+#     whitelist:
+#       tags:
+#       - RMCShellShotgunBuckshot
+#   - type: StorageFill
+#     contents:
+#     - id: CMShellShotgunBuckshot
+#       amount: 5
+#   - type: Sprite
+#     layers:
+#     - state: smallshell_box
+#       color: "#944444"
+#     - state: shell_box_buckshot
+#       color: "#e0d5c2"
+#     - state: smallshell_ammo_full_12g_base
+#       color: "#ffffff"
+#     - state: smallshell_ammo_full_12g_color
+#       color: "#944444"
+#       map: [ "full" ]
+#     - state: smallshell_empty
+#       map: [ "empty" ]
+#       color: "#944444"
 
 - type: entity
   parent: RMCBoxShotgunBase
