--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/xm88_rifle.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/xm88_rifle.yml
@@ -130,21 +130,14 @@
       falloff: 10
 
 - type: entity
-  parent: RMCBoxShotgunBase
-  id: RMCBox458SOCOM
+  parent: RMCBoxMagazineShellBaseSmall
+  id: RMCBox458SOCOMEmpty
   name: box of .458 SOCOM rounds
   description: A box filled with handfuls of .458 SOCOM rounds, designed for use with the XM88 heavy rifle.
   components:
-  - type: Storage
-    grid:
-    - 0,0,21,1
-    whitelist:
-      tags:
-      - RMCCartridge458SOCOM
-  - type: StorageFill
-    contents:
-    - id: RMCCartridge458SOCOM
-      amount: 11
+  - type: Construction
+    graph: RMCBoxMagazine
+    node: RMCBoxShells458SOCOMEmpty
   - type: Sprite
     layers:
     - state: smallshell_box
@@ -152,17 +145,32 @@
     - state: smallshell_box_458
       color: "#e0d5c2"
     - state: smallshell_ammo_12g_full_base
-      color: "#ffffff"
+      map: [ "enum.CMItemSlotsLayers.Fill" ]
     - state: smallshell_ammo_12g_full_color
       color: "#719380"
-      map: [ "full" ]
-    - state: smallshell_empty
-      map: [ "empty" ]
-      color: "#62757b"
-  - type: RMCStorageEjectHand
+      map: [ "enum.CMItemSlotsLayers2.Fill" ]
+  - type: CMItemSlots
+    count: 11
+    slot:
+      whitelist:
+        tags:
+        - RMCCartridge458SOCOM
   - type: Tag
     tags:
     - RMCBox458SOCOM
+
+- type: entity
+  parent: RMCBox458SOCOMEmpty
+  id: RMCBox458SOCOM
+  suffix: Full
+  components:
+  - type: CMItemSlots
+    startingItem: RMCCartridge458SOCOM
+    count: 11
+    slot:
+      whitelist:
+        tags:
+        - RMCCartridge458SOCOM
 
 - type: Tag
   id: RMCCartridge458SOCOM
