fix typo in Construction entry for SOCOM small box

--- a/Resources/Prototypes/_RMC14/Recipes/Construction/magazine_box_crafting.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/magazine_box_crafting.yml
@@ -362,7 +362,7 @@
   startNode: start
   targetNode: RMCBox458SOCOMEmpty
   category: construction-category-cm-box-magazine
-  description: A box for holding handfuls of bullets.
+  description: A small box for holding handfuls of bullets.
   icon:
     sprite: _RMC14/Objects/Weapons/Guns/Ammunition/Boxes/modular_boxes.rsi
     state: smallshell_box
